# lessvm

./: .gitignore  Cargo.toml  README.md  cross-compile-setup.sh  dist-workspace.toml  fix_simd_access_plan.md  netlify.toml  start_local_validator.sh  test-brew-style.sh  test-git-push.sh  vllm_server.sh.test
.cursor/rules/: lessvm-rule.mdc
.github/workflows/: codeql.yml  release.yml
aide/: README.md  custom_instructions.md  debugger_specification.md  development_plan.md  qa_test_plan.md  technical_architecture.md
cli/: .gitignore  .goreleaser.install.ps1  .goreleaser.install.sh  .goreleaser.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  cargo-dist.toml  deployment_fix_plan.md  dist-workspace.toml  test-goreleaser.sh
cli/.github/workflows/: release.yml
cli/src/: build.rs  config.rs  deploy.rs  main.rs  mod.rs  project.rs
cli/wix/: main.wxs
docs/: architecture.html  examples.html  implementation_details.md  instructions.html  solana.html
ideless/: Cargo.toml  development_plan.md  index.html  installation_guide.md  keyboard_shortcuts.md  master-implementation-plan.md  new-plan.md  plan-ai-agent.md  plan-cu-estimator.md  plan-lessvm-core.md  plan-phase1.md  plan-project-templates.md  plan-ratatui-tui.md  plan-tdd-tests.md  qa_test_plan.md  quick_start.md  tailwind.config.js  vite.config.ts
ideless-js/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ai_assistant_specification.md  ai_custom_instructions.md  custom_instructions.md  debugger_specification.md  technical_architecture.md
ideless-js/src/components/ai/: AIAgentIntegration.tsx  AiAssistant.tsx  agent-kit-implementation.md  agent-kit-spec.md
ideless-js/src/components/common/: ModalContainer.tsx  Notifications.tsx
ideless-js/src/pages/: EditorPage.tsx
ideless-js/src/services/agent/: AgentService.test.ts  AgentService.ts
ideless-js/src/store/: index.ts
ideless-js/src/store/slices/: agentSlice.ts  debuggerSlice.ts  simulatorSlice.ts  uiSlice.ts
ideless/screenshots/: README.md
ideless/src/: App.tsx  ai.rs  asm.rs  cli.rs  index.css  lessvm.rs  main.rs  main.tsx  render.rs
ideless/src/components/ai/: AiAssistant.tsx
ideless/src/components/layout/: BottomPanel.tsx  Header.tsx  RightPanel.tsx  Sidebar.tsx
ideless/src/dbg/: cli.rs  hist.rs  mem.rs  mod.rs  shell.rs
ideless/src/layouts/: MainLayout.tsx
ideless/src/pages/: DebuggerPage.tsx
ideless/src/run/: mod.rs
ideless/src/store/: index.ts
ideless/src/store/slices/: editorSlice.ts  projectSlice.ts
ideless/src/tui/: app.rs  event.rs  git.rs  mod.rs  syntax.rs  ui.rs  vscode_ui.rs  vscode_ui.rs.fixed  widgets.rs
ideless/src/tui/vscode/: activity_bar.rs  activity_bar.rs.fixed  command_palette.rs  editor_area.rs  keyboard_shortcuts.rs  mod.rs  panel_area.rs  sidebar.rs  status_bar.rs  syntax_highlight.rs  theme.rs
lessvm-lore/: implementation_plan.md  lessVM_examples.spec.md  lessVM_rs_clauden.spec.md  lessVM_rs_qwen.spec.md  lessVM_solana.spec.md  lessVM_solana_qwen.spec.md  lessvm.spec.md  lessvm1.spec.md  lessvm2.spec.md  lessvm3.spec.md
lessvm-solana/: CONTRIBUTING.md  Cargo.toml  README.md  create-data-account.js  hot_reload_test.sh  run_svm_test.sh  start_local_validator.sh
lessvm-solana/deployless/: deliver_via_account_data.ts  deliver_via_lookup_table.ts  deliver_via_tx_param.ts
lessvm-solana/scripts/: check_validator.sh  deploy.sh  deploy_devnet.sh  init_svm.sh  monitor_deployment.sh  start_validator.sh
lessvm-solana/src/: compiler.rs  lib.rs  program_template.rs  test_programs.rs
lessvm-solana/src/solana/: account.rs  instruction.rs  mod.rs  state.rs
lessvm-solana/src/vm/: core.rs  data_structures.rs  debug.rs  gas.rs  memory.rs  mod.rs  opcodes.rs  stack.rs
lessvm-solana/src/vm/tests/: data_structure_store_tests.rs  data_structures_tests.rs  memory_tests.rs  mod.rs  opcode_tests.rs  vector_add_tests.rs
src/: lessvm.rs  lessvm_test.rs
website/: index.html  index.html.old  styles.css  styles.css.old
website/docs/: architecture.html  cli.html  examples.html  instructions.html  knowledge_graph.html  knowledge_graph.jsonld  knowledge_graph.md  knowledge_graph_cross_compilation.html  knowledge_graph_cross_compilation.md  knowledge_graph_solana.jsonld  solana.html
