[workspace]
members = [
    "cli",
    "lessvm-solana"
]

[workspace.package]
version = "0.1.7"
edition = "2021"
authors = ["LessVM Team"]
license = "MIT"
repository = "https://github.com/openSVM/lessvm"
homepage = "https://github.com/openSVM/lessvm"

# Shared dependencies
[workspace.dependencies]
solana-program = "1.17"
solana-program-test = "1.17"
solana-sdk = "1.17"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
borsh = "0.10"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

# Release profile for all workspace members
[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
