[package]
name = "lessvm-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing LessVM applications"
authors = ["LessVM Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-sbpf = "0.10.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
shellexpand = "3.1"
tempfile = "3.8"
lessvm-solana = { path = "../lessvm-solana", features = ["no-entrypoint"] }
