[package]
name = "lessvm"
version = "0.1.1"
edition = "2021"
description = "CLI tool for managing LessVM applications"
authors = ["LessVM Team"]
license = "MIT"
repository = "https://github.com/openSVM/lessvm"
homepage = "https://github.com/openSVM/lessvm"
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "D54932D2-7897-4B2D-A30C-C07C3FD59654"
path-guid = "90C21E0B-7D55-4F62-9922-35FF6996FCBD"
license = false
eula = false

[dependencies]
clap = { version = "4.4", features = ["derive"] }
solana-sdk.workspace = true
solana-client = "1.17"
solana-program.workspace = true
solana-sbpf = "0.10.0"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
colored = "2.1"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
shellexpand = "3.1"
tempfile = "3.8"
lessvm-solana = { path = "../lessvm-solana", features = ["no-entrypoint"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
