[package]
name = "ideless"
version = "0.1.0"
edition = "2021"
authors = ["LessVM Team"]
description = "A terminal emulator for developing and debugging LessVM programs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "2.0.0"
anyhow = "1.0.69"
byteorder = "1.4.3"
clap = { version = "4.1.8", features = ["derive"] }
console = "0.15.5"
crossterm = { version = "0.26.1", features = ["event-stream"] }
ctrlc = "3.4.0"
device_query = { version = "1.1.3" }
env_logger = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
rodio = "0.17.0"
shell-words = "1.1.0"
solana-client = "1.16.0"
solana-sdk = "1.16.0"
thiserror = "1.0.38"
tui = { package = "ratatui", version = "0.23.0" }
tui-logger = { version = "0.9.1", features = ["ratatui-support"] }

[features]
default = []

[[bin]]
name = "ideless"
path = "src/main.rs"