[package]
name = "lessvm-solana"
version = "0.1.0"
edition = "2021"
description = "Optimized LessVM implementation for Solana"
authors = ["LessVM Team"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
test-sbf = []

[dependencies]
# Core Solana dependencies
solana-program = "1.17"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }

# Serialization & data handling
borsh = "0.10"
bytemuck = { version = "1.13", features = ["derive"] }

# Error handling & utilities
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"

# Optimizations
rayon = "1.7"
smallvec = "1.11"
hashbrown = "0.14"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.32", features = ["full"] }
criterion = "0.5"

[profile.release]
opt-level = 3
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1