[package]
name = "lessvm-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Optimized LessVM implementation for Solana"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
test-sbf = []

[dependencies]
# Core Solana dependencies
solana-program = "1.17"
solana-program-test = "1.17"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }

# Serialization & data handling
borsh = "0.10"
bytemuck = { version = "1.13", features = ["derive"] }

# Error handling & utilities
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"
tempfile = "3.8"

# Optimizations
rayon = "1.7"
smallvec = "1.11"
hashbrown = "0.14"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.32", features = ["full"] }
criterion = "0.5"
