[package]
name = "lessvm-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Optimized LessVM implementation for Solana"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
test-sbf = []

[dependencies]
# Core Solana dependencies
solana-program.workspace = true
solana-program-test.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true

# Serialization & data handling
borsh.workspace = true
bytemuck = { version = "1.13", features = ["derive"] }

# Error handling & utilities
thiserror.workspace = true
num-traits = "0.2"
num-derive = "0.4"
tempfile = "3.8"

# Optimizations
rayon = "1.7"
smallvec = "1.11"
hashbrown = "0.14"

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
criterion = "0.5"
